<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/add_fruit"
            android:textSize="@dimen/header_text_Size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/app_left_right_padding"
            android:layout_marginRight="@dimen/app_left_right_padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fruit_label_text_margin"
                android:text="@string/fruit_name" />

            <EditText
                android:id="@+id/name"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                tools:text="Banana" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/app_left_right_padding"
            android:layout_marginRight="@dimen/app_left_right_padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/weight_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fruit_label_text_margin"
                android:text="@string/fruit_weight"
                android:textSize="@dimen/details_text_size" />

            <EditText
                android:id="@+id/weight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="23"
                android:inputType="number"
                android:textSize="@dimen/details_text_size"
                tools:hint="23" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/app_left_right_padding"
            android:layout_marginRight="@dimen/app_left_right_padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deliciousnes_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_gravity="center"
                android:layout_marginRight="@dimen/fruit_label_text_margin"
                android:text="@string/fruit_deleciousnes_level"
                android:textSize="@dimen/details_text_size" />

            <Switch
                android:id="@+id/deliciousnes_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:checked="false"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/app_left_right_padding"
            android:layout_marginRight="@dimen/app_left_right_padding"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/color_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deliciousnes_label"
                android:layout_marginRight="@dimen/fruit_label_text_margin"
                android:layout_marginTop="6dp"
                android:text="@string/fruit_color"
                android:textSize="@dimen/details_text_size" />

            <EditText
                android:id="@+id/color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="yellow"
                android:textSize="@dimen/details_text_size"
                tools:text="green" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/send_fruit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:text="@string/add_fruit_button" />

    <ProgressBar
        android:id="@+id/progress_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>


</RelativeLayout>